Allow to check if a file matches a MimeType
Also adds some new MimeTypes and Magic bytes.

427883